<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    tools:context=".FullProfile">

    <!-- IMG -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">


        <ImageView
            android:id="@+id/img_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:src="@drawable/user"
            android:contentDescription="@string/profile_picture" />

    </RelativeLayout>

    <!-- BASIC PROFILE -->
    <!-- NAME -->
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="25sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:numColumns="2"
        >

        <!-- AGE -->
        <TextView
            android:id="@+id/title_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/age"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/number_zeros"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/age_unit"
            android:textSize="16sp" />


        <!-- WEIGHT -->
        <TextView
            android:id="@+id/title_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/weight"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="0"
            android:layout_column="4"
            android:text="@string/number_zeros"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="0"
            android:layout_column="5"
            android:text="@string/weight_unit"
            android:textSize="16sp" />

        <!-- HEIGHT -->
        <TextView
            android:id="@+id/title_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/height"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/number_zeros"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/height_unit"
            android:textSize="16sp" />


        <!-- HAIR -->
        <TextView
            android:id="@+id/title_hair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/hair"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_hair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/hair_color"
            android:textSize="16sp" />

    </GridLayout>

    <!-- PROFESIONES -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/professions"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list_professions"
        android:layout_width="match_parent"
        android:layout_height="160dp">
    </ListView>

    <!-- AMISTADES -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/friendships"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list_friendships"
        android:layout_width="match_parent"
        android:layout_height="100dp">
    </ListView>

</LinearLayout>