<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_shadow"
    android:orientation="horizontal"
    android:id="@+id/lilear_gnomo_b"
    android:baselineAligned="false">

    <!-- LEFT -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_weight="2"
        android:background="@color/colorPrimary"
        android:padding="10dp">


        <ImageView
            android:id="@+id/img_profile_picture_b"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:src="@drawable/user"
            android:contentDescription="@string/profile_picture" />

    </RelativeLayout>

    <!-- RIGHT -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp">

        <!-- NAME -->
        <TextView
            android:id="@+id/txt_name_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20sp" />


        <!-- AGE -->
        <TextView
            android:id="@+id/title_age_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txt_name_b"
            android:text="@string/age"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_age_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txt_name_b"
            android:layout_toEndOf="@+id/title_height_b"
            android:text="@string/number_zeros"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txt_name_b"
            android:layout_toEndOf="@+id/txt_age_b"
            android:text="@string/age_unit"
            android:textSize="16sp" />


        <!-- PESO -->
        <TextView
            android:id="@+id/title_weight_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_age_b"
            android:text="@string/weight"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_weight_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_age_b"
            android:layout_toEndOf="@+id/title_height_b"
            android:text="@string/number_zeros"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_age_b"
            android:layout_toEndOf="@+id/txt_weight_b"
            android:text="@string/weight_unit"
            android:textSize="16sp" />

        <!-- ESTATURA -->
        <TextView
            android:id="@+id/title_height_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_weight_b"
            android:text="@string/height"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_height_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_weight_b"
            android:layout_toEndOf="@+id/title_height_b"
            android:text="@string/number_zeros"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_weight_b"
            android:layout_toEndOf="@+id/txt_height_b"
            android:text="@string/height_unit"
            android:textSize="16sp" />


        <!-- HAIR -->
        <TextView
            android:id="@+id/title_hair_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_height_b"
            android:text="@string/hair"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_hair_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@id/txt_height_b"
            android:layout_toEndOf="@+id/title_height_b"
            android:text="@string/hair_color"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
